# mehmetsunkur-uol-module5-midterm

./: Makefile  README.md  cline_mcp_setting.json
cm3020-wip/: .gitignore  Hierarchical_Agent_Teams.py  Makefile  pyproject.toml  raw_data.json  requirements.txt  research_report.txt  temp0.urdf  test.urdf
cm3020-wip/.devcontainer/: devcontainer.json
cm3020-wip/docs/: 1412.3409v2.md  1412.3409v2_extracted.txt  1712.01815v1_extracted.txt  1903.03674v2.md  1903.03674v2_extracted.txt  1911.08265v2.md  1911.08265v2_extracted.txt  2411.14411v1.md  2411.14411v1_extracted copy.txt  2411.17585v1.md  2411.17585v1_extracted.txt  2412.00725v1.md  2412.00725v1_extracted.txt  2412.02016v1.md  2412.02016v1_extracted.txt  2412.08725v1.md  2412.08725v1_extracted.txt  2412.11979v1.md  2412.11979v1_extracted.txt  AlphaGo_and_Monte_Carlo_tree_search_The_simulation_optimization_perspective.md  AlphaGo_and_Monte_Carlo_tree_search_The_simulation_optimization_perspective_extracted.txt  Mastering_the_game_of_Go_with_deep_neura.md  Mastering_the_game_of_Go_with_deep_neura_extracted.txt  OL-CM3020-Berliner.md  OL-CM3020-Berliner_extracted.txt  OL-CM3020-Schaeffer-7038.md  OL-CM3020-Schaeffer-7038_extracted.txt  OL-CO3020-Shannon.md  OL-CO3020-Shannon_extracted.txt  Project_Thyia_A_Forever_Gameplayer.md  Project_Thyia_A_Forever_Gameplayer_extracted.txt  silver-2017b.md  silver-2017b_extracted.txt
cm3020-wip/parta/: IEEE_research_scraper.py  academic_research_scraper.py  agent_test.py  analysis_20241228_013502.json  arxiv_analysis_20241228_011549.json  arxiv_raw_data_20241228_011549.json  arxiv_report_20241228_011549.txt  arxiv_research_scraper.py  assigment_executor.py  docling_pdf_to_md.py  extract_relevant_info.py  extractor.py  generic_utils.py  main.py  parta.md  parta.py  parta_agents.py  parta_utils.py  (+19 more)
(+295 files in other folders)
