[tool.poetry]
name = "submission"
version = "0.1.0"
description = ""
authors = ["Mehmet Sunkur <mehmet.sunkur@cybersoft.com.tr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "proxpi"
url = "http://10.8.0.6:9191/index/"
priority = "primary"
